syntax = "proto3";

option go_package = "github.com/Desk888/commons/api";

package api;

import "google/protobuf/empty.proto";

message Order {
    string id = 1;
    string customer_id = 2;
    string status = 3;
    repeated ItemsWithQuantity items = 4;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (Order);
    rpc UpdateOrder(Order) returns (Order);
    rpc DeleteOrder(DeleteOrderRequest) returns (google.protobuf.Empty);
}

message Item {
    string id = 1;
    string name = 2;
    int32 quantity = 3;
    string price_id = 4;
}

message ItemsWithQuantity {
    string id = 1;
    int32 quantity = 2;
}

message CreateOrderRequest {
    string customer_id = 1;
    repeated ItemsWithQuantity items = 2;
}

message CreateOrderResponse {
    string order_id = 1;
}

message GetOrderRequest {
    string id = 1;
}

message DeleteOrderRequest {
    string order_id = 1;
}